--- a/app/src/main/res/layout/activity_dadjoke.xml
+++ b/app/src/main/res/layout/activity_dadjoke.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:text=""
+                android:text="@string/txt_dad_joke"
                 android:textSize="15sp" />
         </LinearLayout>
 
